# toto-combinator

./: .gitignore  OPTIMIZATION_ANALYSIS_REPORT.md  app.py  app_parallel.py  app_testing.py  baseline_test.py  bump_build.py  core_functions.py  data_models.py  final_optimization_report.json  generate_test_cases.py  optimization_pruning.py  optimization_testing.py  optimization_validation_report_parallelization.json  optimization_validation_report_pruning.json  optimized_functions.py  parallel_optimization_results.json  pruning_results_simplified.json  pyproject.toml  test_data_generator.py  test_optimization_validation.py  test_parallel_optimization.py  test_pruning_optimization.py  test_pruning_simplified.py
tests/: OPTIMIZATION_REPORT.md  baseline_metrics.json  generate_final_report.py  generate_test_cases.py  optimization_summary.json  parallel_optimization_results.json  parallel_optimization_results_pruning.json  pruning_optimization_report.json  pruning_results_simplified.json  test_app.py  test_parallel_optimization.py  test_pruning_simplified.py
tests/assets/: 131.xlsx  243.xlsx
tests/assets/ground_truths/: 131_3_ProcessingMode.AGGREGATIVE_0_2.pickle  131_3_ProcessingMode.SEPARATE_0_1.pickle  131_3_ProcessingMode.SEPARATE_1_2.pickle  131_4_ProcessingMode.AGGREGATIVE_0_1.pickle  131_4_ProcessingMode.SEPARATE_0_2.pickle  131_4_ProcessingMode.SEPARATE_1_1.pickle  243_3_ProcessingMode.AGGREGATIVE_0_2.pickle  243_3_ProcessingMode.SEPARATE_0_1.pickle  243_3_ProcessingMode.SEPARATE_1_2.pickle  243_4_ProcessingMode.AGGREGATIVE_0_1.pickle  (+2 more)
