[tool.poetry]
name = "toto_combinator"
version = "0.1.0"
description = "A simple Windows GUI app for matrix calculations from Excel files."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pandas = "*"
openpyxl = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.14.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 