[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "toto_combinator"
version = "1.3.0"
description = "A simple Windows GUI app for matrix calculations from Excel files."
authors = [ "Your Name <your.email@example.com>",]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pandas = "*"
openpyxl = "*"
tqdm = "^4.67.1"

[tool.poetry.dev-dependencies]
pytest = "*"

[tool.poetry.scripts]
bump-build = "bump_build:main"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.14.2"
